--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -34,6 +34,7 @@
     "@types/jest": "~26.0.22",
     "@types/lodash": "^4.14.168",
     "ng-packagr": "^12.0.0-next.8",
+    "nw-toolchain": "^1.0.0",
     "jest": "~26.6.3",
     "jest-preset-angular": "~8.4.0",
     "cross-env": "^7.0.3",
