--- a/libs/nw-components-angular/tsconfig.json
+++ b/libs/nw-components-angular/tsconfig.json
@@ -1,6 +1,6 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./node_modules/nw-toolchain/includes/tsconfig-web.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
