--- a/libs/nw-core/package.json
+++ b/libs/nw-core/package.json
@@ -20,7 +20,7 @@
     "@types/d3": "^6.3.0",
     "@types/d3-force": "^2.1.1",
     "@types/node": "^12.11.1",
-    "dvjay-toolchain": "^1.0.0",
-    "typescript": "^3.0.3"
+    "nw-toolchain": "^1.0.0",
+    "typescript": "^4.2.4"
   }
 }
