--- a/libs/nw-d3-force-adapter/package.json
+++ b/libs/nw-d3-force-adapter/package.json
@@ -19,7 +19,7 @@
     "@types/jest": "~26.0.22",
     "@types/d3-force": "^2.1.1",
     "@types/node": "^12.11.1",
-    "dvjay-toolchain": "^1.0.0",
-    "typescript": "^3.0.3"
+    "nw-toolchain": "^1.0.0",
+    "typescript": "^4.2.4"
   }
 }
