--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "@angular/compiler-cli": "~12.0.0-rc.1",
     "@types/node": "^12.11.1",
     "ng-packagr": "^12.0.0-next.8",
-    "typescript": "~4.2.3"
+    "typescript": "^4.2.4"
   }
 }
