--- a/tools/nw-toolchain/includes/tsconfig-web.json
+++ b/tools/nw-toolchain/includes/tsconfig-web.json
@@ -1,9 +1,9 @@
 {
   "$schema": "http://json.schemastore.org/tsconfig",
 
+  "compileOnSave": false,
   "compilerOptions": {
     "outDir": "../../../lib",
-
     "forceConsistentCasingInFileNames": true,
     "jsx": "react",
     "declaration": true,
@@ -11,23 +11,32 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
+    "baseUrl": "./",
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "downlevelIteration": true,
     "types": [
+      "node"
     ],
-
-    "module": "esnext",
     "moduleResolution": "node",
-    "target": "es5",
+    "module": "es2020",
+    "target": "es2017",
     "lib": [
-      "es5",
+      "es2018",
       "scripthost",
-      "es2015.collection",
-      "es2015.promise",
-      "es2015.iterable",
       "dom"
-    ]
+    ],
+    "importHelpers": true
+  },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   },
   "include": [
-    "../../../src/**/*.ts",
+    "../../../src/**/*.ts"
   ],
   "exclude": [
     "../../../node_modules",
