--- a/tools/nw-toolchain/package.json
+++ b/tools/nw-toolchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-toolchain",
+  "name": "nw-toolchain",
   "version": "1.0.0",
   "description": "An example toolchain used to build projects in this repo",
   "license": "MIT",
@@ -17,6 +17,6 @@
   "devDependencies": {
     "@types/node": "^10.9.4",
     "rimraf": "^2.6.2",
-    "typescript": "^3.0.3"
+    "typescript": "^4.2.4"
   }
 }
