--- a/angular.json
+++ b/angular.json
@@ -1,13 +1,16 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "cli": {
+    "packageManager": "pnpm"
+  },
   "newProjectRoot": "libs",
   "projects": {
     "nw-components-angular": {
       "projectType": "library",
       "root": "libs/nw-components-angular",
       "sourceRoot": "libs/nw-components-angular/src",
-      "prefix": "dvj",
+      "prefix": "gfct",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
@@ -16,13 +19,88 @@
           },
           "configurations": {
             "production": {
-              "tsConfig": "libs/nw-components-angular/tsconfig.json"
+              "tsConfig": "libs/nw-components-angular/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "libs/nw-components-angular/tsconfig.json"
+              "tsConfig": "libs/nw-components-angular/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
+        }
+      }
+    },
+    "demo-angular": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "apps/demo-angular",
+      "sourceRoot": "apps/demo-angular/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/demo-angular",
+            "index": "apps/demo-angular/src/index.html",
+            "main": "apps/demo-angular/src/main.ts",
+            "polyfills": "apps/demo-angular/src/polyfills.ts",
+            "tsConfig": "apps/demo-angular/tsconfig.app.json",
+            "aot": true,
+            "assets": [
+              "apps/demo-angular/src/favicon.ico",
+              "apps/demo-angular/src/assets"
+            ],
+            "styles": [
+              "apps/demo-angular/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "apps/demo-angular/src/environments/environment.ts",
+                  "with": "apps/demo-angular/src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "demo-angular:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "demo-angular:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "demo-angular:build"
+          }
         }
       }
     }
