--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development"
   },
@@ -27,6 +27,7 @@
     "@angular/compiler-cli": "~12.0.0-rc.1",
     "@types/node": "^12.11.1",
     "ng-packagr": "^12.0.0-next.8",
-    "typescript": "^4.2.4"
+    "ng-samurai": "^2.0.6",
+    "typescript": "~4.2.3"
   }
 }
