--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser": "~12.0.0-rc.1",
     "@angular/platform-browser-dynamic": "~12.0.0-rc.1",
     "@angular/router": "~12.0.0-rc.1",
+    "@gfct/nw-components-angular": "1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
