--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -2,10 +2,40 @@
   "name": "@gfct/nw-components-angular",
   "version": "1.0.0",
   "peerDependencies": {
-    "@angular/common": "^12.0.0-rc.2",
-    "@angular/core": "^12.0.0-rc.2"
+    "@angular/animations": "~12.0.0-rc.2",
+    "@angular/common": "~12.0.0-rc.2",
+    "@angular/compiler": "~12.0.0-rc.2",
+    "@angular/core": "~12.0.0-rc.2",
+    "@angular/forms": "~12.0.0-rc.2",
+    "@angular/platform-browser": "~12.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "~12.0.0-rc.2",
+    "rxjs": "~6.6.0",
+    "zone.js": "~0.11.4"
   },
   "dependencies": {
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "@angular/cdk": "^12.0.0-rc.2",
+    "@angular/material": "^12.0.0-rc.2",
+    "@ngrx/effects": "^12.0.0-rc.0",
+    "@ngrx/entity": "^12.0.0-rc.0",
+    "@ngrx/store": "^12.0.0-rc.0",
+    "@ngrx/store-devtools": "^12.0.0-rc.0",
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~12.0.0-rc.2",
+    "@angular/cli": "~12.0.0-rc.2",
+    "@angular/compiler-cli": "~12.0.0-rc.2",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^12.11.1",
+    "cross-env": "^7.0.3",
+    "ng-packagr": "^12.0.0-next.8",
+    "ngx-tailwind": "^2.1.0",
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.4"
   }
 }
