--- a/libs/nw-core/package.json
+++ b/libs/nw-core/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "~26.0.22",
     "@types/d3": "^6.3.0",
     "@types/d3-force": "^2.1.1",
+    "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.1",
     "nw-toolchain": "^1.0.0",
     "typescript": "^4.2.4"
