--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -16,6 +16,7 @@
     "tslib": "^2.1.0",
     "@angular/cdk": "^12.0.0-rc.2",
     "@angular/material": "^12.0.0-rc.2",
+    "@gfct/nw-core": "1.0.0",
     "@ngrx/effects": "^12.0.0-rc.0",
     "@ngrx/entity": "^12.0.0-rc.0",
     "@ngrx/store": "^12.0.0-rc.0",
