--- a/libs/nw-core/package.json
+++ b/libs/nw-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nw-core",
+  "name": "@gfct/nw-core",
   "version": "1.0.0",
   "description": "Network Graph Core Library",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "@types/d3-force": "^2.1.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.1",
-    "nw-toolchain": "^1.0.0",
+    "@gfct/nw-toolchain": "^1.0.0",
     "typescript": "^4.2.4"
   }
 }
