--- a/apps/demo-angular/src/nwconfig.json
+++ b/apps/demo-angular/src/nwconfig.json
@@ -1,31 +1,112 @@
 {
-    "maxSelectedNodes": 5,
-    "displayLabel": true,
-    "autoExpand": false,
-    "numHops": 2,
-    "maxNodeCount": 200,
-    "viewportHeight": 700,
-    "node": {
-      "parentKey": "printSet",
-      "parentRawPath": [""],
-      "nodeIdAttributeName": "id",
-      "nodeTypeAttributeName": "id",
-      "nodeTypes": [{ "id": "entity", "displayName": "Entity", "color": "#80B9E7", "imagePath": "assets/images/customer.png"}
-      ],
-      "nodeAttributes": [
-        { "id": "nodeId", "displayName": "Node ID", "rawPath": ["v_id"], "required": true, "tooltip": false },
-        { "id": "nodeType", "displayName": "Node Type", "rawPath": ["v_type"], "required": true, "tooltip": false }
-      ],
-      "alerts": [
-        { "id": "CASE-FRD", "rawPath": ["attribute", "casetype"], "valueType": "string", "value": "FRD", "alertMessage": "FRD Case Found!" }
-      ]
-    },
-    "edge": {
-      "parentKey": "@@edgeSet",
-      "parentRawPath": [""],
-      "edgeIdAttributeName": "id",
-      "edgeAttributes": [
-        { "id": "edgeId", "displayName": "Edge ID", "rawPath": ["attributes", "id"], "required": true, "tooltip": false }
-      ]
-    }
+  "maxSelectedNodes": 5,
+  "displayLabel": true,
+  "autoExpand": false,
+  "numHops": 2,
+  "maxNodeCount": 200,
+  "viewportHeight": 700,
+  "nodeRadius": 20,
+  "node": {
+    "parentRawPath": ["nodes"],
+    "nodeIdAttributeKey": "nodeId",
+    "nodeTypeAttributeKey": "nodeType",
+    "nodeTitleAttributeKey": "label",
+    "nodeTypes": [{ "name": "entity", "displayName": "Entity", "color": "#80B9E7", "imagePath": "assets/images/entity.png",
+                    "nodeAttributes": [
+                      { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                      { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                      { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                      { "key": "entityid", "displayName": "Account ID", "rawPath": ["entityid"], "tooltip": false },
+                      { "key": "entitylabel", "displayName": "Account Number", "rawPath": ["entitylabel"], "tooltip": false },
+                      { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "account", "displayName": "Account", "color": "#80B9E7", "imagePath": "assets/images/account.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "amlaccid", "displayName": "Account ID", "rawPath": ["amlaccid"], "tooltip": false },
+                        { "key": "accno", "displayName": "Account Number", "rawPath": ["accno"], "tooltip": false },
+                        { "key": "accom", "displayName": "Account OM", "rawPath": ["accom"], "tooltip": false },
+                        { "key": "accopendate", "displayName": "Account Open Date", "rawPath": ["accopendate"], "tooltip": false },
+                        { "key": "accptyrolecd", "displayName": "Account Party Role Code", "rawPath": ["accptyrolecd"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "party", "displayName": "Party", "color": "#80B9E7", "imagePath": "assets/images/party.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "amlptyid", "displayName": "AML PTY ID", "rawPath": ["amlptyid"], "tooltip": false },
+                        { "key": "partyfullname", "displayName": "Party Full Name", "rawPath": ["partyfullname"], "tooltip": false },
+                        { "key": "ptyid", "displayName": "Party ID", "rawPath": ["ptyid"], "tooltip": false },
+                        { "key": "gcino", "displayName": "GCI No.", "rawPath": ["gcino"], "tooltip": false },
+                        { "key": "mlid", "displayName": "ML ID", "rawPath": ["mlid"], "tooltip": false },
+                        { "key": "itn", "displayName": "ITN", "rawPath": ["itn"], "tooltip": false },
+                        { "key": "ssn", "displayName": "SSN", "rawPath": ["ssn"], "tooltip": false },
+                        { "key": "ein", "displayName": "EIN", "rawPath": ["ein"], "tooltip": false },
+                        { "key": "flucd", "displayName": "FLU Code", "rawPath": ["flucd"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "email", "displayName": "Email", "color": "#80B9E7", "imagePath": "assets/images/email.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "emailaddress", "displayName": "Email Address", "rawPath": ["emailaddress"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "address", "displayName": "Address", "color": "#80B9E7", "imagePath": "assets/images/address.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "partyaddress", "displayName": "Party Address", "rawPath": ["partyaddress"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "ein", "displayName": "EIN", "color": "#80B9E7", "imagePath": "assets/images/ein.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "ein", "displayName": "EIN", "rawPath": ["ein"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "itn", "displayName": "ITN", "color": "#80B9E7", "imagePath": "assets/images/itn.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "itn", "displayName": "ITN", "rawPath": ["itn"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "ssn", "displayName": "SSN", "color": "#80B9E7", "imagePath": "assets/images/ssn.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "ssn", "displayName": "ITN", "rawPath": ["ssn"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]},
+                    { "name": "phone", "displayName": "Phone", "color": "#80B9E7", "imagePath": "assets/images/phone.png",
+                      "nodeAttributes": [
+                        { "key": "nodeId", "displayName": "Node ID", "rawPath": ["nodeId"], "tooltip": false },
+                        { "key": "label", "displayName": "Label", "rawPath": ["label"], "tooltip": false },
+                        { "key": "nodeType", "displayName": "Node Type", "rawPath": ["nodeType"], "tooltip": false },
+                        { "key": "phonenumber", "displayName": "Phone Number", "rawPath": ["phonenumber"], "tooltip": false },
+                        { "key": "isskewed", "displayName": "Skewed", "rawPath": ["isskewed"], "tooltip": false }
+                    ]}
+    ]
+  },
+  "edge": {
+    "parentRawPath": ["links"], 
+    "edgeSourceIdAttributeKey": "source",
+    "edgeTargetIdAttributeKey": "target",
+    "edgeTitleAttributeKey": "name",
+    "edgeAttributes": [
+      { "key": "source", "displayName": "Source Node Id", "rawPath": ["source"], "tooltip": false },
+      { "key": "target", "displayName": "Target Node Id", "rawPath": ["target"], "tooltip": false },
+      { "key": "name", "displayName": "Name", "rawPath": ["name"], "tooltip": false }
+    ]
+  }
 }
