--- a/libs/nw-core/package.json
+++ b/libs/nw-core/package.json
@@ -12,7 +12,8 @@
     "d3-force": "^2.1.1",
     "d3-selection": "^2.0.0",
     "lodash": "^4.17.21",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "~26.6.3",
@@ -21,6 +22,7 @@
     "@types/d3-force": "^2.1.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.0",
     "@gfct/nw-toolchain": "^1.0.0",
     "typescript": "^4.2.4"
   }
