--- a/tools/nw-toolchain/package.json
+++ b/tools/nw-toolchain/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "rimraf ./lib/ && tsc",
-    "my-bulk-command": ""
+    "my-bulk-command": "",
+    "jserve": "json-server --watch src/json-server/db.js --delay 1000 --routes src/json-server/routes.json --middlewares src/json-server/middleware.js --port 3001"
   },
   "dependencies": {
     "colors": "^1.3.2"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^10.9.4",
     "rimraf": "^2.6.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "json-server": "^0.16.3"
   }
 }
