--- a/libs/nw-components-angular7/package.json
+++ b/libs/nw-components-angular7/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nw-components-angular7",
-  "version": "0.0.0",
+  "name": "@gfct/nw-components-angular7",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,15 +10,14 @@
     "e2e": "ng e2e"
   },
   "private": true,
-  "dependencies": {
+  "peerDependencies": {
     "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
+    "@angular/common": "^7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^7.2.0",
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
