--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -1,42 +1,51 @@
 {
   "name": "@gfct/nw-components-angular",
   "version": "1.0.0",
-  "peerDependencies": {
-    "@angular/animations": "~12.0.0-rc.2",
-    "@angular/common": "~12.0.0-rc.2",
-    "@angular/compiler": "~12.0.0-rc.2",
-    "@angular/core": "~12.0.0-rc.2",
-    "@angular/forms": "~12.0.0-rc.2",
-    "@angular/platform-browser": "~12.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "~12.0.0-rc.2",
-    "rxjs": "~6.6.0",
-    "zone.js": "~0.11.4"
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "dependencies": {
-    "tslib": "^2.1.0",
-    "@angular/cdk": "^12.0.0-rc.2",
-    "@angular/material": "^12.0.0-rc.2",
-    "@gfct/nw-core": "1.0.0",
-    "@ngrx/effects": "^12.0.0-rc.0",
-    "@ngrx/schematics": "^12.0.0-rc.0",
-    "@ngrx/store": "^12.0.0-rc.0",
-    "lodash": "^4.17.21"
+  "private": true,
+  "peerDependencies": {
+    "@angular/animations": "~7.2.0",
+    "@angular/common": "^7.2.0",
+    "@angular/compiler": "~7.2.0",
+    "@angular/core": "^7.2.0",
+    "@angular/forms": "~7.2.0",
+    "@angular/platform-browser": "~7.2.0",
+    "@angular/platform-browser-dynamic": "~7.2.0",
+    "core-js": "^2.5.4",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0-rc.2",
-    "@angular/cli": "~12.0.0-rc.2",
-    "@angular/compiler-cli": "~12.0.0-rc.2",
-    "@ngrx/store-devtools": "^12.0.0-rc.0",
-    "@tailwindcss/aspect-ratio": "latest",
-    "@tailwindcss/forms": "latest",
-    "@tailwindcss/line-clamp": "latest",
-    "@tailwindcss/typography": "latest",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.11.1",
-    "cross-env": "^7.0.3",
-    "ng-packagr": "^12.0.0-next.8",
-    "ngx-tailwind": "^2.1.0",
-    "tailwindcss": "^2.0.3",
-    "typescript": "^4.2.4"
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-ng-packagr": "~0.13.0",
+    "@angular/cli": "~7.3.10",
+    "@angular/compiler-cli": "~7.2.0",
+    "@angular/language-service": "~7.2.0",
+    "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.34.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.2.2"
   }
 }
