--- a/libs/nw-components-angular-bk/package.json
+++ b/libs/nw-components-angular-bk/package.json
@@ -1,40 +1,32 @@
 {
-  "name": "gfctui",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve -o",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "build:prod": "cross-env NODE_ENV=production ng build --prod"
-  },
-  "private": true,
-  "dependencies": {
+  "name": "@gfct/nw-components-angular",
+  "version": "1.0.0",
+  "peerDependencies": {
     "@angular/animations": "~12.0.0-rc.2",
-    "@angular/cdk": "^12.0.0-rc.2",
     "@angular/common": "~12.0.0-rc.2",
     "@angular/compiler": "~12.0.0-rc.2",
     "@angular/core": "~12.0.0-rc.2",
     "@angular/forms": "~12.0.0-rc.2",
-    "@angular/material": "^12.0.0-rc.2",
     "@angular/platform-browser": "~12.0.0-rc.2",
     "@angular/platform-browser-dynamic": "~12.0.0-rc.2",
-    "@angular/router": "~12.0.0-rc.2",
-    "@ngrx/effects": "^12.0.0-rc.0",
-    "@ngrx/entity": "^12.0.0-rc.0",
-    "@ngrx/store": "^12.0.0-rc.0",
-    "@ngrx/store-devtools": "^12.0.0-rc.0",
-    "@gfct/nw-components-angular": "1.0.0",
-    "date-fns": "^2.21.2",
-    "lodash": "^4.17.21",
     "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
+  },
+  "dependencies": {
+    "tslib": "^2.1.0",
+    "@angular/cdk": "^12.0.0-rc.2",
+    "@angular/material": "^12.0.0-rc.2",
+    "@gfct/nw-core": "1.0.0",
+    "@ngrx/effects": "^12.0.0-rc.0",
+    "@ngrx/schematics": "^12.0.0-rc.0",
+    "@ngrx/store": "^12.0.0-rc.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.0-rc.2",
     "@angular/cli": "~12.0.0-rc.2",
     "@angular/compiler-cli": "~12.0.0-rc.2",
+    "@ngrx/store-devtools": "^12.0.0-rc.0",
     "@tailwindcss/aspect-ratio": "latest",
     "@tailwindcss/forms": "latest",
     "@tailwindcss/line-clamp": "latest",
@@ -43,7 +35,6 @@
     "@types/node": "^12.11.1",
     "cross-env": "^7.0.3",
     "ng-packagr": "^12.0.0-next.8",
-    "ng-samurai": "^2.0.6",
     "ngx-tailwind": "^2.1.0",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.4"
