--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -10,21 +10,22 @@
   },
   "private": true,
   "peerDependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "~7.3.7",
-    "@angular/common": "^7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "^7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@ngrx/effects": "~7.4.0",
-    "@ngrx/store": "~7.4.0",
-    "@ngrx/store-devtools": "~7.4.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@ngrx/effects": "^8.6.1",
+    "@ngrx/store": "^8.6.1",
+    "@ngrx/store-devtools": "^8.6.1",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1"
   },
   "dependencies": {
     "d3": "^5.16.0",
@@ -34,21 +35,20 @@
     "webcola": "^3.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular-devkit/build-ng-packagr": "~0.13.0",
-    "@angular/cli": "~7.3.10",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "~0.803.29",
+    "@angular-devkit/build-ng-packagr": "~0.803.29",
+    "@angular/cli": "~8.3.29",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/d3": "^5.7.2",
     "@types/lodash": "^4.14.144",
     "@types/node": "~8.9.4",
     "@types/uuid": "^8.3.0",
-    "codelyzer": "~4.5.0",
-    "ng-packagr": "^4.2.0",
+    "codelyzer": "^5.0.0",
+    "ng-packagr": "^5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.34.0",
-    "tslib": "^2.1.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "tsickle": "^0.37.0",
+    "tslint": "~5.15.0",
+    "typescript": "~3.5.3"
   }
 }
