--- a/apps/demo-angular7/package.json
+++ b/apps/demo-angular7/package.json
@@ -21,9 +21,21 @@
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.8.26",
-    "@gfct/nw-components-angular": "1.0.0"
+    "@gfct/nw-components-angular": "1.0.0",
+    "d3": "^5.16.0",
+    "d3-force": "^2.0.1",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
+    "webcola": "^3.4.0",
+
+
+    "@angular/cdk": "~7.3.7",
+    "@angular/material": "^7.3.7",
+    "@ngrx/effects": "~7.4.0",
+    "@ngrx/store": "~7.4.0",
+    "@ngrx/store-devtools": "~7.4.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -33,6 +45,10 @@
     "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/d3": "^5.7.2",
+    "@types/d3-force": "^2.1.1",
+    "@types/lodash": "^4.14.144",
+    "@types/uuid": "^8.3.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
