--- a/apps/demo-angular7/tsconfig.json
+++ b/apps/demo-angular7/tsconfig.json
@@ -9,11 +9,13 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "importHelpers": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "skipLibCheck": true,
+    // "typeRoots": [
+    //   "node_modules/@types"
+    // ],
     "lib": [
       "es2018",
       "dom"
