--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -41,6 +41,7 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/d3": "^5.7.2",
+    "@types/d3-force": "^2.1.1",
     "@types/lodash": "^4.14.144",
     "@types/node": "~8.9.4",
     "@types/uuid": "^8.3.0",
