--- a/libs/nw-components-angular/tsconfig.lib.json
+++ b/libs/nw-components-angular/tsconfig.lib.json
@@ -10,7 +10,9 @@
     "inlineSources": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "downlevelIteration": true,
     "importHelpers": true,
+    "noImplicitAny": false,
     "types": [],
     "lib": [
       "dom",
