--- a/libs/nw-components-angular/package.json
+++ b/libs/nw-components-angular/package.json
@@ -3,53 +3,59 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
   "private": true,
   "peerDependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
     "@ngrx/effects": "^8.6.1",
     "@ngrx/store": "^8.6.1",
     "@ngrx/store-devtools": "^8.6.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "dependencies": {
     "d3": "^5.16.0",
     "d3-force": "^2.0.1",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2",
     "webcola": "^3.4.0"
   },
+  "dependencies": {},
   "devDependencies": {
+    "@angular/common": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@ngrx/effects": "^8.6.1",
+    "@ngrx/store": "^8.6.1",
+    "@ngrx/store-devtools": "^8.6.1",
+    "@angular/animations": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
     "@angular-devkit/build-angular": "~0.803.29",
     "@angular-devkit/build-ng-packagr": "~0.803.29",
     "@angular/cli": "~8.3.29",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/d3": "^5.7.2",
-    "@types/d3-force": "^2.1.1",
-    "@types/lodash": "^4.14.144",
     "@types/node": "~8.9.4",
-    "@types/uuid": "^8.3.0",
+    "@types/d3": "^5.16.0",
+    "@types/d3-force": " ^2.1.1",
     "codelyzer": "^5.0.0",
     "ng-packagr": "^5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
+    "d3": "^5.16.0",
+    "d3-force": "^2.0.1",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2",
+    "webcola": "^3.4.0"
   }
 }
