--- a/libs/nw-components-angular/tsconfig.lib.json
+++ b/libs/nw-components-angular/tsconfig.lib.json
@@ -1,18 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
-    "module": "es2015",
-    "moduleResolution": "node",
     "declaration": true,
-    "sourceMap": true,
     "inlineSources": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "downlevelIteration": true,
-    "importHelpers": true,
-    "noImplicitAny": false,
     "types": [],
     "lib": [
       "dom",
